# remembrance

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
agent/: __init__.py
cases/: cognitive_agent.py  customer_support.py  energy_optimizer.py  health_assistant.py  robotics_coordinator.py  spatial_intelligence.py
docs/: index.html
memory/: episodic.py  procedural.py  semantic.py  sensory.py  strategic.py
remembrance/: __init__.py
remembrance/agent/: __init__.py
remembrance/memory/: __init__.py  collective.py  emotional.py  prospective.py  working.py
tests/: test_memory.py
